* fixed score entry check for initialized playoff brackets to use event division instead of team division.

Release 2.10

* remove experimental warning from PDF brackets (1605785)

* Set path in setenv.bat (1605786)

Release 2.9
* fixed compilation error in remoteControl.jsp and added unit test to watch for it

Release 2.8
* fixed categorized score report to show by division (1599044)

* Remote control for the scoreboard now uses all divisions to determine how many rounds are possible (1599039)

* PDF reports now show all raw scores, just like the HTML reports (1599786)

Release 2.7
* Added the ability for tiebreakers to have sums (and coefficients on the goals)

* added help text to the admin pages

* added underscores to the front of the goal titles in the PDF scoresheet to allow the refs to check them off

Release 2.6

* include Sun's JDK for Linux and Windows distributions so that Java doesn't need to be installed

* Switched databases from MySQL to HSQL to make installation easier.  Now the only thing that needs to be installed for the software to run is Java.

* included the Tomcat install as part of the software

* added PDF forms for the final scores document

* added PDF forms for the scoresheets

* added summary dialog for the subjective scoring application to allow one to see how many scores had been entered for each team in a category


2005-12-05  Jon Schewe  <jpschewe@mtu.net>

	* Release version 2.5
	
2005-01  Dan Churchill

	* web/scoreEntry/select_team.jsp: Added logic for Last Run when editing scores

2004-12-20  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/ScoreStandardization.java (ScoreStandardization): Fixed
	computation of final scores so that scores from other tournaments
	are not seen in the final report.

2004-12-18  Jon Schewe  <jpschewe@mtu.net>

	* prj.el: Updated the mysql database driver

	* web/WEB-INF/web-default.xml: Changed database host to be
	127.0.0.1, seems to work better than localhost with newer mysql installs.
